--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="ui inverted black footer vertical segment">
-  <div class="container">
+  <div class="ui container">
     <div class="ui stackable inverted divided relaxed grid">
       <div class="eight wide column">
         <h3 class="ui inverted header">Help Make Semantic UI Better</h3>
