Remove minheight on home

--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -14,6 +14,7 @@
 }
 #example > .pusher {
   display: block;
+  min-height: 0px;
   flex-direction: initial;
 }
 #example > .pusher > .full.height {
