Updates to docs

--- a/server/raw/stylesheets/docs.css
+++ b/server/raw/stylesheets/docs.css
@@ -1160,6 +1160,14 @@ body.progress.animated .ui.progress .bar {
 }
 
 /*--------------
+      Modal
+---------------*/
+
+#example.modal-page .main.container {
+  z-index: auto;
+}
+
+/*--------------
       Popup
 ---------------*/
 
