--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -484,6 +484,7 @@ body#example {
    Basic Display
 -----------------*/
 
+
 #example.basic .main.container {
   background: transparent !important;
   border: none !important;
@@ -493,10 +494,11 @@ body#example {
 
 #example.basic .fixed.menu > .container,
 #example.basic .main.container,
-#example.basic .top > .container,
+#example.basic .masthead > .container,
 #example.basic .footer > .container {
   position: relative;
   width: 700px;
+  left: 0px;
 }
 
 #example.basic > .pusher > .full.height {
@@ -1730,7 +1732,7 @@ body.progress.animated .ui.progress .bar {
   }
 }
 
-@media only screen and (max-width : 780px) {
+@media only screen and (max-width : 980px) {
   pre.console {
     height: 150px;
   }
@@ -1792,6 +1794,36 @@ body.progress.animated .ui.progress .bar {
   #example .main.container > .tab > .right.rail .sticky {
     display: none;
   }
+  /* Resize Sticky */
+  #example .container .right.rail {
+    width: 200px;
+    padding-left: 0em;
+  }
+
+
+  /* Advert in Rail */
+  #example .introduction {
+    display: block;
+    padding-right: 115px;
+  }
+  #example .advertisement {
+    left: 100%;
+    margin-left: -115px;
+    position: absolute;
+    top: 0em;
+    vertical-align: top;
+  }
+
+  /* Remove Sticky Footer */
+  #example > .pusher {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  #example > .pusher > .full.height {
+    display: block;
+    height: auto;
+  }
 }
 
 @media only screen and (max-width : 998px) {
@@ -1815,64 +1847,8 @@ body.progress.animated .ui.progress .bar {
     margin-bottom: 0.5em;
   }
   #example .examples {
-    margin-right: 230px;
+    margin-right: 330px;
     padding: 1px;
-  }
-}
-
-@media only screen and (min-width : 781px) and (max-width : 998px) {
-
-
-  /* Remove Sticky Footer */
-  #example > .pusher {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-  #example > .pusher > .full.height {
-    display: block;
-    height: auto;
-  }
-
-  /* Resize Containers */
-  #example .fixed.menu > .container {
-    width: 100% !important;
-    margin-left: 0em !important;
-    margin-right: 0em !important;
-  }
-  #example .main.container,
-  #example .masthead > .container,
-  #example .footer > .container {
-    width: auto !important;
-    margin-left: 2em !important;
-  }
-  #example .main.container,
-  #example .masthead > .container,
-  #example .footer > .container {
-    margin-right: 235px !important;
-  }
-
-  /* Resize Sticky */
-  #example .container .right.rail {
-    width: 200px;
-    padding-left: 0em;
-  }
-  #example .main.container > .right.rail .sticky,
-  #example .main.container > .tab > .right.rail .sticky {
-    width: 200px;
-  }
-
-  /* Advert in Rail */
-  #example .introduction {
-    display: block;
-    padding-right: 115px;
-  }
-  #example .advertisement {
-    left: 100%;
-    margin-left: -115px;
-    position: absolute;
-    top: 0em;
-    vertical-align: top;
   }
 }
 
