--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -910,7 +910,7 @@ body#example {
   position: absolute;
   top: 1rem;
   left: 1rem;
-  background-color: #F0F0F0;
+  background-color: #FAFAFA;
   content: '';
   width: calc(100% - 2rem);
   height: calc(100% - 2rem);
@@ -922,7 +922,7 @@ body#example {
 }
 
 #example .highlighted.example .grid .grid:before {
-  background-color: #E0E0E0;
+  background-color: #F0F0F0;
 }
 #example .highlighted.example .row {
   position: relative;
@@ -933,8 +933,8 @@ body#example {
   z-index: 11;
 }
 #example .highlighted.example .grid .column:not(.row):not(.grid):after {
-  background-color: #FFFFFF;
-  box-shadow: 0px 0px 0px 1px #DDDDDD inset;
+  background-color: rgba(86, 61, 124, .1);
+  box-shadow: 0px 0px 0px 1px rgba(86, 61, 124, 0.2) inset;
   content: "";
   display: block;
   min-height: 50px;
@@ -955,6 +955,7 @@ body#example {
 #example .negative.example > .button {
   position: relative;
   z-index: 100;
+  margin: 0px 1px;
 }
 #example .highlighted.special.example .page.grid > .column:first-child:after,
 #example .highlighted.special.example .page.grid > .column:last-child:after {
