--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -1,26 +1,98 @@
-<div class="menu">
-  <div class="item" data-percent="100" data-value="en"     data-english="English">English</div>
-  <div class="item" data-percent="94" data-value="da"     data-english="Danish">dansk</div>
-  <div class="item" data-percent="94"  data-value="es"     data-english="Spanish">Español</div>
-  <div class="item" data-percent="34"  data-value="zh"     data-english="Chinese">简体中文</div>
-  <div class="item" data-percent="54"  data-value="zh_TW"  data-english="Chinese (Taiwan)">中文 (臺灣)</div>
-  <div class="item" data-percent="79"  data-value="fa"     data-english="Persian">پارسی</div>
-  <div class="item" data-percent="41"  data-value="fr"     data-english="French">Français</div>
-  <div class="item" data-percent="37"  data-value="el"     data-english="Greek">ελληνικά</div>
-  <div class="item" data-percent="37"  data-value="ru"     data-english="Russian">Русский</div>
-  <div class="item" data-percent="36"  data-value="de"     data-english="German">Deutsch</div>
-  <div class="item" data-percent="23"  data-value="it"     data-english="Italian">Italiano</div>
-  <div class="item" data-percent="21"  data-value="nl"     data-english="Dutch">Nederlands</div>
-  <div class="item" data-percent="19"  data-value="pt_BR"  data-english="Portuguese">Português(BR)</div>
-  <div class="item" data-percent="17"  data-value="id"     data-english="Indonesian">Indonesian</div>
-  <div class="item" data-percent="12"  data-value="lt"     data-english="Lithuanian">Lietuvių</div>
-  <div class="item" data-percent="11"  data-value="tr"     data-english="Turkish">Türkçe</div>
-  <div class="item" data-percent="10"  data-value="kr"     data-english="Korean">한국어</div>
-  <div class="item" data-percent="7"   data-value="ar"     data-english="Arabic">العربية</div>
-  <div class="item" data-percent="6"   data-value="hu"     data-english="Hungarian">Magyar</div>
-  <div class="item" data-percent="6"   data-value="vi"     data-english="Vietnamese">tiếng Việt</div>
-  <div class="item" data-percent="5"   data-value="sv"     data-english="Swedish">svenska</div>
-  <div class="item" data-precent="4"   data-value="pl"     data-english="Polish">polski</div>
-  <div class="item" data-percent="6"   data-value="ja"     data-english="Japanese">日本語</div>
-  <div class="item" data-percent="0"   data-value="ro"     data-english="Romanian">românește</div>
+<div class="scrolling menu">
+  <div class="item" data-percent="100" data-value="en" data-english="English">
+    English
+    <span class="description">English</span>
+  </div>
+  <div class="item" data-percent="94" data-value="da" data-english="Danish">
+    dansk
+    <span class="description">Danish</span>
+  </div>
+  <div class="item" data-percent="94" data-value="es" data-english="Spanish">
+    Español
+    <span class="description">Spanish</span>
+  </div>
+  <div class="item" data-percent="34" data-value="zh" data-english="Chinese">
+    简体中文
+    <span class="description">Chinese</span>
+  </div>
+  <div class="item" data-percent="54" data-value="zh_TW" data-english="Chinese (Taiwan)">
+    中文 (臺灣)
+    <span class="description">Chinese (Taiwan)</span>
+  </div>
+  <div class="item" data-percent="79" data-value="fa" data-english="Persian">
+    پارسی
+    <span class="description">Persian</span>
+  </div>
+  <div class="item" data-percent="41" data-value="fr" data-english="French">
+    Français
+    <span class="description">French</span>
+  </div>
+  <div class="item" data-percent="37" data-value="el" data-english="Greek">
+    ελληνικά
+    <span class="description">Greek</span>
+  </div>
+  <div class="item" data-percent="37" data-value="ru" data-english="Russian">
+    Русский
+    <span class="description">Russian</span>
+  </div>
+  <div class="item" data-percent="36" data-value="de" data-english="German">
+    Deutsch
+    <span class="description">German</span>
+  </div>
+  <div class="item" data-percent="23" data-value="it" data-english="Italian">
+    Italiano
+    <span class="description">Italian</span>
+  </div>
+  <div class="item" data-percent="21" data-value="nl" data-english="Dutch">
+    Nederlands
+    <span class="description">Dutch</span>
+  </div>
+  <div class="item" data-percent="19" data-value="pt_BR"  data-english="Portuguese">
+    Português(BR)
+    <span class="description">Portuguese</span>
+  </div>
+  <div class="item" data-percent="17" data-value="id" data-english="Indonesian">
+    Indonesian
+    <span class="description">Indonesian</span>
+  </div>
+  <div class="item" data-percent="12" data-value="lt" data-english="Lithuanian">
+    Lietuvių
+    <span class="description">Lithuanian</span>
+  </div>
+  <div class="item" data-percent="11" data-value="tr" data-english="Turkish">
+    Türkçe
+    <span class="description">Turkish</span>
+  </div>
+  <div class="item" data-percent="10" data-value="kr" data-english="Korean">
+    한국어
+    <span class="description">Korean</span>
+  </div>
+  <div class="item" data-percent="7"  data-value="ar" data-english="Arabic">
+    العربية
+    <span class="description">Arabic</span>
+  </div>
+  <div class="item" data-percent="6"  data-value="hu" data-english="Hungarian">
+    Magyar
+    <span class="description">Hungarian</span>
+  </div>
+  <div class="item" data-percent="6"  data-value="vi" data-english="Vietnamese">
+    tiếng Việt
+    <span class="description">Vietnamese</span>
+  </div>
+  <div class="item" data-percent="5"  data-value="sv" data-english="Swedish">
+    svenska
+    <span class="description">Swedish</span>
+  </div>
+  <div class="item" data-precent="4"  data-value="pl" data-english="Polish">
+    polski
+    <span class="description">Polish</span>
+  </div>
+  <div class="item" data-percent="6"  data-value="ja" data-english="Japanese">
+    日本語
+    <span class="description">Japanese</span>
+  </div>
+  <div class="item" data-percent="0"  data-value="ro" data-english="Romanian">
+    românește
+    <span class="description">Romanian</span>
+  </div>
 </div>
