Update form and dropdown examples

--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -4,95 +4,95 @@
     <span class="description">English</span>
   </div>
   <div class="item" data-percent="94" data-value="da" data-english="Danish">
-    dansk
-    <span class="description">Danish</span>
+    Danish
+    <span class="description">dansk</span>
   </div>
   <div class="item" data-percent="94" data-value="es" data-english="Spanish">
-    Español
-    <span class="description">Spanish</span>
+    Spanish
+    <span class="description">Español</span>
   </div>
   <div class="item" data-percent="34" data-value="zh" data-english="Chinese">
-    简体中文
-    <span class="description">Chinese</span>
+    Chinese
+    <span class="description">简体中文</span>
   </div>
   <div class="item" data-percent="54" data-value="zh_TW" data-english="Chinese (Taiwan)">
-    中文 (臺灣)
-    <span class="description">Chinese (Taiwan)</span>
+    Chinese (Taiwan)
+    <span class="description">中文 (臺灣)</span>
   </div>
   <div class="item" data-percent="79" data-value="fa" data-english="Persian">
-    پارسی
-    <span class="description">Persian</span>
+    Persian
+    <span class="description">پارسی</span>
   </div>
   <div class="item" data-percent="41" data-value="fr" data-english="French">
-    Français
-    <span class="description">French</span>
+    French
+    <span class="description">Français</span>
   </div>
   <div class="item" data-percent="37" data-value="el" data-english="Greek">
-    ελληνικά
-    <span class="description">Greek</span>
+    Greek
+    <span class="description">ελληνικά</span>
   </div>
   <div class="item" data-percent="37" data-value="ru" data-english="Russian">
-    Русский
-    <span class="description">Russian</span>
+    Russian
+    <span class="description">Русский</span>
   </div>
   <div class="item" data-percent="36" data-value="de" data-english="German">
-    Deutsch
-    <span class="description">German</span>
+    German
+    <span class="description">Deutsch</span>
   </div>
   <div class="item" data-percent="23" data-value="it" data-english="Italian">
-    Italiano
-    <span class="description">Italian</span>
+    Italian
+    <span class="description">Italiano</span>
   </div>
   <div class="item" data-percent="21" data-value="nl" data-english="Dutch">
-    Nederlands
-    <span class="description">Dutch</span>
+    Dutch
+    <span class="description">Nederlands</span>
   </div>
   <div class="item" data-percent="19" data-value="pt_BR"  data-english="Portuguese">
-    Português(BR)
-    <span class="description">Portuguese</span>
+    Portuguese
+    <span class="description">Português(BR)</span>
   </div>
   <div class="item" data-percent="17" data-value="id" data-english="Indonesian">
     Indonesian
     <span class="description">Indonesian</span>
   </div>
   <div class="item" data-percent="12" data-value="lt" data-english="Lithuanian">
-    Lietuvių
-    <span class="description">Lithuanian</span>
+    Lithuanian
+    <span class="description">Lietuvių</span>
   </div>
   <div class="item" data-percent="11" data-value="tr" data-english="Turkish">
-    Türkçe
-    <span class="description">Turkish</span>
+    Turkish
+    <span class="description">Türkçe</span>
   </div>
   <div class="item" data-percent="10" data-value="kr" data-english="Korean">
-    한국어
-    <span class="description">Korean</span>
+    Korean
+    <span class="description">한국어</span>
   </div>
   <div class="item" data-percent="7"  data-value="ar" data-english="Arabic">
-    العربية
-    <span class="description">Arabic</span>
+    Arabic
+    <span class="description">العربية</span>
   </div>
   <div class="item" data-percent="6"  data-value="hu" data-english="Hungarian">
-    Magyar
-    <span class="description">Hungarian</span>
+    Hungarian
+    <span class="description">Magyar</span>
   </div>
   <div class="item" data-percent="6"  data-value="vi" data-english="Vietnamese">
-    tiếng Việt
-    <span class="description">Vietnamese</span>
+    Vietnamese
+    <span class="description">tiếng Việt</span>
   </div>
   <div class="item" data-percent="5"  data-value="sv" data-english="Swedish">
-    svenska
-    <span class="description">Swedish</span>
+    Swedish
+    <span class="description">svenska</span>
   </div>
   <div class="item" data-precent="4"  data-value="pl" data-english="Polish">
-    polski
-    <span class="description">Polish</span>
+    Polish
+    <span class="description">polski</span>
   </div>
   <div class="item" data-percent="6"  data-value="ja" data-english="Japanese">
-    日本語
-    <span class="description">Japanese</span>
+    Japanese
+    <span class="description">日本語</span>
   </div>
   <div class="item" data-percent="0"  data-value="ro" data-english="Romanian">
-    românește
-    <span class="description">Romanian</span>
+    Romanian
+    <span class="description">românește</span>
   </div>
 </div>
