--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -995,7 +995,10 @@ body#example {
 }
 
 #example.site .colors.example .column {
-  min-height: 100px;
+  padding: 50px 0px;
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: bold;
 }
 
 @-webkit-keyframes grid {
