Update reveal docs

--- a/server/partials/examples/feed.html
+++ b/server/partials/examples/feed.html
@@ -30,7 +30,7 @@
             Time period ago
           </div>
           <div class="summary">
-            <a>Userrname</a> added <a>new photos</a>
+            <a>Username</a> added <a>new photos</a>
           </div>
           <div class="extra images">
             <a><img src="/images/wireframe/image.png"></a>
