--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -1,97 +1,97 @@
 <div class="scrolling menu">
-  <div class="item" data-percent="100" data-value="en" data-english="English">
+  <div class="item" data-percent="100" data-value="en" dadata-text="English" ta-english="English">
     English
     <span class="description">English</span>
   </div>
-  <div class="item" data-percent="94" data-value="da" data-english="Danish">
+  <div class="item" data-percent="94" data-value="da" datdata-text="dansk" a-english="Danish">
     Danish
     <span class="description">dansk</span>
   </div>
-  <div class="item" data-percent="94" data-value="es" data-english="Spanish">
+  <div class="item" data-percent="94" data-value="es" datdata-text="Español" a-english="Spanish">
     Spanish
     <span class="description">Español</span>
   </div>
-  <div class="item" data-percent="34" data-value="zh" data-english="Chinese">
+  <div class="item" data-percent="34" data-value="zh" datdata-text="简体中文" a-english="Chinese">
     Chinese
     <span class="description">简体中文</span>
   </div>
-  <div class="item" data-percent="54" data-value="zh_TW" data-english="Chinese (Taiwan)">
+  <div class="item" data-percent="54" data-value="zh_TW" data-text="中文 (臺灣)" data-english="Chinese (Taiwan)">
     Chinese (Taiwan)
     <span class="description">中文 (臺灣)</span>
   </div>
-  <div class="item" data-percent="79" data-value="fa" data-english="Persian">
+  <div class="item" data-percent="79" data-value="fa" datdata-text="پارسی" a-english="Persian">
     Persian
     <span class="description">پارسی</span>
   </div>
-  <div class="item" data-percent="41" data-value="fr" data-english="French">
+  <div class="item" data-percent="41" data-value="fr" datdata-text="Français" a-english="French">
     French
     <span class="description">Français</span>
   </div>
-  <div class="item" data-percent="37" data-value="el" data-english="Greek">
+  <div class="item" data-percent="37" data-value="el" datdata-text="ελληνικά" a-english="Greek">
     Greek
     <span class="description">ελληνικά</span>
   </div>
-  <div class="item" data-percent="37" data-value="ru" data-english="Russian">
+  <div class="item" data-percent="37" data-value="ru" datdata-text="Русский" a-english="Russian">
     Russian
     <span class="description">Русский</span>
   </div>
-  <div class="item" data-percent="36" data-value="de" data-english="German">
+  <div class="item" data-percent="36" data-value="de" datdata-text="Deutsch" a-english="German">
     German
     <span class="description">Deutsch</span>
   </div>
-  <div class="item" data-percent="23" data-value="it" data-english="Italian">
+  <div class="item" data-percent="23" data-value="it" datdata-text="Italiano" a-english="Italian">
     Italian
     <span class="description">Italiano</span>
   </div>
-  <div class="item" data-percent="21" data-value="nl" data-english="Dutch">
+  <div class="item" data-percent="21" data-value="nl" datdata-text="Nederlands" a-english="Dutch">
     Dutch
     <span class="description">Nederlands</span>
   </div>
-  <div class="item" data-percent="19" data-value="pt_BR"  data-english="Portuguese">
+  <div class="item" data-percent="19" data-value="pt_BR" data-text="Português(BR)"  data-english="Portuguese">
     Portuguese
     <span class="description">Português(BR)</span>
   </div>
-  <div class="item" data-percent="17" data-value="id" data-english="Indonesian">
+  <div class="item" data-percent="17" data-value="id" datdata-text="Indonesian" a-english="Indonesian">
     Indonesian
     <span class="description">Indonesian</span>
   </div>
-  <div class="item" data-percent="12" data-value="lt" data-english="Lithuanian">
+  <div class="item" data-percent="12" data-value="lt" datdata-text="Lietuvių" a-english="Lithuanian">
     Lithuanian
     <span class="description">Lietuvių</span>
   </div>
-  <div class="item" data-percent="11" data-value="tr" data-english="Turkish">
+  <div class="item" data-percent="11" data-value="tr" datdata-text="Türkçe" a-english="Turkish">
     Turkish
     <span class="description">Türkçe</span>
   </div>
-  <div class="item" data-percent="10" data-value="kr" data-english="Korean">
+  <div class="item" data-percent="10" data-value="kr" datdata-text="한국어" a-english="Korean">
     Korean
     <span class="description">한국어</span>
   </div>
-  <div class="item" data-percent="7"  data-value="ar" data-english="Arabic">
+  <div class="item" data-percent="7"  data-value="ar" datdata-text="العربية" a-english="Arabic">
     Arabic
     <span class="description">العربية</span>
   </div>
-  <div class="item" data-percent="6"  data-value="hu" data-english="Hungarian">
+  <div class="item" data-percent="6"  data-value="hu" datdata-text="Magyar" a-english="Hungarian">
     Hungarian
     <span class="description">Magyar</span>
   </div>
-  <div class="item" data-percent="6"  data-value="vi" data-english="Vietnamese">
+  <div class="item" data-percent="6"  data-value="vi" datdata-text="tiếng Việt" a-english="Vietnamese">
     Vietnamese
     <span class="description">tiếng Việt</span>
   </div>
-  <div class="item" data-percent="5"  data-value="sv" data-english="Swedish">
+  <div class="item" data-percent="5"  data-value="sv" datdata-text="svenska" a-english="Swedish">
     Swedish
     <span class="description">svenska</span>
   </div>
-  <div class="item" data-precent="4"  data-value="pl" data-english="Polish">
+  <div class="item" data-precent="4"  data-value="pl" datdata-text="polski" a-english="Polish">
     Polish
     <span class="description">polski</span>
   </div>
-  <div class="item" data-percent="6"  data-value="ja" data-english="Japanese">
+  <div class="item" data-percent="6"  data-value="ja" datdata-text="日本語" a-english="Japanese">
     Japanese
     <span class="description">日本語</span>
   </div>
-  <div class="item" data-percent="0"  data-value="ro" data-english="Romanian">
+  <div class="item" data-percent="0"  data-value="ro" datdata-text="românește" a-english="Romanian">
     Romanian
     <span class="description">românește</span>
   </div>
